--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -63,7 +63,7 @@
 <p>Jedn&aacute; se o n&aacute;stroje pro vytv&aacute;&#345;en&iacute; z&aacute;kladn&iacute;ch prvk&#367; nebo p&#345;id&aacute;v&aacute;n&iacute; materi&aacute;lu k existuj&iacute;c&iacute;mu tvaru.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a>: vytla&#269;uje t&#283;leso z vybran&eacute;ho n&aacute;&#269;rtu.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Revolution.svg&amp;filetimestamp=20170324054918&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Revolution.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Revolution.html" title="PartDesign Revolution">Revolution</a>: creates a solid by revolving a sketch around an axis. The sketch must form a closed profile.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Revolution.svg&amp;filetimestamp=20170324054918&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Revolution.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Revolution.html" title="PartDesign Revolution">Ot&aacute;&#269;ka</a>: vytvo&#345;&iacute; t&#283;leso oto&#269;en&iacute;m n&aacute;&#269;rtu kolem osy. N&aacute;&#269;rt mus&iacute; tvo&#345;it uzav&#345;en&yacute; profil.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveLoft.svg&amp;filetimestamp=20200118062952&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveLoft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveLoft.html" title="PartDesign AdditiveLoft">Additive Loft</a>: creates a solid by making a transition between two or more sketches.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditivePipe.svg&amp;filetimestamp=20200326013518&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditivePipe.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditivePipe.html" title="PartDesign AdditivePipe">Additive Pipe</a>: creates a solid by sweeping one or more sketches along an open or closed path.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveHelix.svg&amp;filetimestamp=20210205035955&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveHelix.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveHelix.html" title="PartDesign AdditiveHelix">Additive Helix</a>: creates a solid by sweeping a sketch along a helix.</li></ul>
@@ -187,12 +187,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205341
+Cached time: 20260119205417
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.226 seconds
-Real time usage: 0.690 seconds
+CPU time usage: 0.239 seconds
+Real time usage: 0.408 seconds
 Preprocessor visited node count: 464/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -203,18 +203,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.982      1 -total
- 52.43%   16.769      1 Template:PartDesign_Tools_navi/cs
- 18.46%    5.904      1 Template:Userdocnavi/cs
- 10.52%    3.364      2 Template:Navigation_menu_2
-  6.94%    2.220      2 Template:Docnav
-  5.56%    1.778      1 Template:Version
-  5.33%    1.705      1 Template:MenuCommand
-  4.83%    1.546      5 Template:VersionPlus
-  3.85%    1.232      1 Template:TOCright
+100.00%   27.436      1 -total
+ 28.98%    7.950      1 Template:PartDesign_Tools_navi/cs
+ 28.66%    7.864      1 Template:Userdocnavi/cs
+ 18.41%    5.051      2 Template:Navigation_menu_2
+ 11.66%    3.199      5 Template:VersionPlus
+  8.60%    2.359      2 Template:Docnav
+  7.13%    1.955      1 Template:Version
+  6.33%    1.736      1 Template:TOCright
+  5.19%    1.424      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205340 and revision id 1741201. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205417 and revision id 1741203. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
