--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -64,7 +64,7 @@
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a>: vytla&#269;uje t&#283;leso z vybran&eacute;ho n&aacute;&#269;rtu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Revolution.svg&amp;filetimestamp=20170324054918&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Revolution.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Revolution.html" title="PartDesign Revolution">Ot&aacute;&#269;ka</a>: vytvo&#345;&iacute; t&#283;leso oto&#269;en&iacute;m n&aacute;&#269;rtu kolem osy. N&aacute;&#269;rt mus&iacute; tvo&#345;it uzav&#345;en&yacute; profil.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveLoft.svg&amp;filetimestamp=20200118062952&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveLoft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveLoft.html" title="PartDesign AdditiveLoft">Additive Loft</a>: creates a solid by making a transition between two or more sketches.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveLoft.svg&amp;filetimestamp=20200118062952&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveLoft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveLoft.html" title="PartDesign AdditiveLoft">Sou&#269;tov&eacute; profilov&aacute;n&iacute;</a>: vytvo&#345;&iacute; t&#283;leso p&#345;echodem mezi dv&#283;ma nebo v&iacute;ce n&aacute;&#269;rtky.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditivePipe.svg&amp;filetimestamp=20200326013518&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditivePipe.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditivePipe.html" title="PartDesign AdditivePipe">Additive Pipe</a>: creates a solid by sweeping one or more sketches along an open or closed path.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveHelix.svg&amp;filetimestamp=20210205035955&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveHelix.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveHelix.html" title="PartDesign AdditiveHelix">Additive Helix</a>: creates a solid by sweeping a sketch along a helix.</li></ul>
 <ul><li><span id="PartDesign_CompPrimitiveAdditive"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveBox.svg&amp;filetimestamp=20191206231922&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveBox.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Additive Primitive:</span></li></ul>
@@ -187,12 +187,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205417
+Cached time: 20260119205507
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.239 seconds
-Real time usage: 0.408 seconds
+CPU time usage: 0.211 seconds
+Real time usage: 0.500 seconds
 Preprocessor visited node count: 464/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -203,18 +203,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.436      1 -total
- 28.98%    7.950      1 Template:PartDesign_Tools_navi/cs
- 28.66%    7.864      1 Template:Userdocnavi/cs
- 18.41%    5.051      2 Template:Navigation_menu_2
- 11.66%    3.199      5 Template:VersionPlus
-  8.60%    2.359      2 Template:Docnav
-  7.13%    1.955      1 Template:Version
-  6.33%    1.736      1 Template:TOCright
-  5.19%    1.424      1 Template:MenuCommand
+100.00%   35.338      1 -total
+ 28.55%   10.089      1 Template:Userdocnavi/cs
+ 26.42%    9.337      2 Template:Docnav
+ 21.41%    7.566      1 Template:PartDesign_Tools_navi/cs
+ 10.40%    3.675      2 Template:Navigation_menu_2
+  6.48%    2.291      1 Template:MenuCommand
+  6.25%    2.209      5 Template:VersionPlus
+  4.22%    1.493      1 Template:TOCright
+  4.08%    1.443      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205417 and revision id 1741203. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205507 and revision id 1741205. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
