--- a/wiki/fr/TechDraw_SectionView.html
+++ b/wiki/fr/TechDraw_SectionView.html
@@ -64,13 +64,11 @@ L'image du bas montre le format de fl&egrave;che ISO.</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S&eacute;lectionnez une vue de la pi&egrave;ce dans la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a> ou la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
+<ol><li>S&eacute;lectionnez une vue de la pi&egrave;ce dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a> ou l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_SectionView.svg&amp;filetimestamp=20241124213855&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer une vue en coupe</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_SectionView.svg&amp;filetimestamp=20241124213855&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une vue en coupe</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_SectionView.svg&amp;filetimestamp=20241124213855&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Vue en coupe</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_SectionView.svg&amp;filetimestamp=20241124213855&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vue en coupe</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre et vous aide &agrave; calculer les diff&eacute;rentes propri&eacute;t&eacute;s. Des valeurs raisonnables pour la direction de la vue sont calcul&eacute;es, mais elles peuvent &ecirc;tre modifi&eacute;es.</li></ol>
-</div>
 <div class="mw-translate-fuzzy">
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Section_Taskview.png&amp;filetimestamp=20200316113722&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Section_Taskview.png" decoding="async" width="380" height="420" class="mw-file-element" data-file-width="380" data-file-height="420"></a></span>
 </p>
@@ -222,15 +220,15 @@ L'image du bas montre le format de fl&egrave;che ISO.</p>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119210241
+Cached time: 20260119210344
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.140 seconds
-Real time usage: 0.587 seconds
-Preprocessor visited node count: 1740/1000000
-Post&#8208;expand include size: 40239/2097152 bytes
-Template argument size: 12562/2097152 bytes
+CPU time usage: 0.146 seconds
+Real time usage: 0.613 seconds
+Preprocessor visited node count: 1739/1000000
+Post&#8208;expand include size: 40213/2097152 bytes
+Template argument size: 12536/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -238,19 +236,19 @@ Unstrip post&#8208;expand size: 4674/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  220.848      1 -total
- 19.40%   42.850     20 Template:PropertyData
- 12.22%   26.982      6 Template:TitleProperty
- 12.02%   26.539     26 Template:Variable
- 11.92%   26.331      1 Template:TechDraw_Tools_navi/fr
- 11.54%   25.481      1 Template:Userdocnavi/fr
-  9.00%   19.876      6 Template:PropertyView
-  6.23%   13.754      1 Template:GuiCommand/fr
-  5.32%   11.740      2 Template:Navigation_menu_2
-  5.17%   11.409     15 Template:Value
+100.00%  154.383      1 -total
+ 29.74%   45.907     20 Template:PropertyData
+ 26.62%   41.090     26 Template:Variable
+  9.69%   14.952      2 Template:Docnav/fr
+  9.50%   14.662      1 Template:Userdocnavi/fr
+  9.26%   14.299      1 Template:TechDraw_Tools_navi/fr
+  8.55%   13.192      6 Template:PropertyView
+  8.49%   13.109      6 Template:TitleProperty
+  7.69%   11.868      2 Template:Navigation_menu_2
+  5.22%    8.053     41 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180626-0!canonical and timestamp 20260119210240 and revision id 1741228. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180626-0!canonical and timestamp 20260119210343 and revision id 1741234. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
